<resources>
    <string name="app_name">Sunrise ToDo List App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_do_list">To Do List</string>
    <string name="notes">Notes</string>
    <string name="summary">Summary</string>
    <string name="add_task">Add task</string>
    <string name="what_do_you_need_to_get_done">What do you need to get done?</string>
    <string name="describe_it_briefly">Any Notes?</string>
    <string name="due_date">Due Date</string>
    <string name="start_date">Start Date</string>
    <string name="priority_level">Priority Level</string>
    <string name="new_task">New Task</string>
    <string name="set_start_date">Set Start Date</string>
    <string name="set_due_date">Set Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="set_due_time">Set Due Time</string>
    <string name="start_time">Start Time</string>
    <string name="set_start_time">Set Start Time</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="later">Later</string>
    <string name="budget">Budget</string>
    <string name="plan_your_day">Plan Your Day</string>
    <string name="sunrise">SUNRISE</string>
    <string name="sunrise_tit">SunRise</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="write_here">Write here...</string>
    <string name="save">Save Note</string>
    <string name="new_budget">New Budget</string>
    <string name="budgets">Budgets</string>
    <string name="save_budget">Save Budget</string>
    <string name="how_much_do_you_have">How much do you have?</string>
    <string name="total_cost">Total Cost:</string>
    <string name="how_much_is_it">How much is each?</string>
    <string name="save_item">Save Item</string>
    <string name="how_many_do_you_need">How many do you need?</string>
    <string name="settings">Settings</string>
    <string name="text_size">Text Size</string>
    <string name="notebook_settings">Notebook Settings</string>
    <string name="morning_alarm_time">Morning Alarm Time</string>
    <string name="morning_alarm">Morning Alarm</string>
    <string name="disappearing_tasks">Disappearing Tasks</string>
    <string name="to_do_list_settings">To Do List Settings</string>
    <string name="over_due">Over Due</string>
    <string name="remainder">Remainder:</string>
    <string name="pinned">Pinned</string>
    <string name="extend">Extend</string>
    <string name="due_task">Due Task!!</string>
    <string name="one_day_extension">One Day Extension</string>
    <string name="what_is_it_called">What is it called?</string>
    <string name="home">Home</string>
    <string name="archives">Archives</string>
    <string name="goals">Goals</string>
    <string name="create_goal">New Goal</string>
    <string name="what_will_you_call_it">What will you call it?</string>
    <string name="new_goal">New Goal</string>
    <string name="set_end_date">Set End Date</string>
    <string name="end_date">End Date</string>
    <string name="set_goal">Set Goal</string>
    <string name="daily_time">Daily Time</string>
    <string name="set_daily_time">Set Daily Time</string>
    <string name="goal">Goal</string>
    <string name="hide_habit_goals">Hide Habit Goals</string>

    <string-array name="priority_levels">
        <item>Low</item>
        <item>Moderate</item>
        <item>High</item>
    </string-array>

</resources>