<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".AddTask">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/add_task_top_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/add_task_back"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@drawable/ic_back"
                app:tint="@color/dark" />

            <TextView
                android:id="@+id/add_task_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:text="@string/new_task"
                android:textAlignment="center"
                android:textColor="@color/indigo_main"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@drawable/ic_back"
                app:tint="@color/white" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/add_task_top_bar">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/what_do_you_need_to_get_done"
            android:textColorHint="#9C9C9C"
            app:hintTextColor="@color/indigo_main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_name_input_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@color/white"
                android:inputType="text"
                android:maxLength="25"
                android:textColor="@color/dark"
                android:textColorHint="#9C9C9C" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/describe_it_briefly"
            android:textColorHint="#9C9C9C"
            app:hintTextColor="@color/indigo_main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_description_input_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@color/white"
                android:inputType="textMultiLine"
                android:textColor="@color/dark"
                android:textColorHint="#9C9C9C" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_due_date_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_weight="1"
                android:textColorHint="@color/indigo_main"
                android:textStyle="italic"
                android:paddingStart="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:backgroundTint="@color/indigo_main"
                android:enabled="false"
                android:hint="@string/due_date"
                android:textColor="@color/indigo_main"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/set_due_date_btn"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/set_due_date"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/task_due_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/task_due_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_weight="1"
                android:textStyle="italic"
                android:text="@string/due_time"
                android:textColor="@color/indigo_main"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/task_due_time_btn"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/set_due_time"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_start_date_input_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_weight="1"
                android:paddingStart="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:textColorHint="@color/indigo_main"
                android:textStyle="italic"
                android:backgroundTint="@color/indigo_main"
                android:enabled="false"
                android:hint="@string/start_date"
                android:textColor="@color/indigo_main"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/set_start_date_btn"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/set_start_date"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/task_start_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/task_start_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_weight="1"
                android:text="@string/start_time"
                android:textStyle="italic"
                android:textColor="@color/indigo_main"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/task_start_time_btn"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/set_start_time"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/add_task_priority_level_tit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_weight="1"
                android:text="@string/priority_level"
                android:textColor="@color/error"
                android:textSize="@dimen/_12ssp" />

            <Spinner
                android:id="@+id/add_task_priority_level_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:entries="@array/priority_levels" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_task_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/button_background"
            android:text="@string/add_task"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:backgroundTint="@color/cacky" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>