<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.NotesFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/nothing_img"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/nothing"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"/>

            <TextView
                android:id="@+id/nothing_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nothing Here!"
                android:visibility="gone"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/yantramanav_bold"/>

            <TextView
                android:id="@+id/note_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/notes"
                android:textColor="@color/indigo_main"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pinned_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/pinned"
                android:textColor="#757575"
                android:textStyle="italic"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pinned_notes_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:clipToPadding="false"
                app:layout_constraintTop_toBottomOf="@id/note_label" />

            <View
                android:id="@+id/pinned_barrier"
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:background="#C3C3C3"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/notes_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_15sdp"
                android:clipToPadding="false"
                app:layout_constraintTop_toBottomOf="@id/note_label" />

        </LinearLayout>



        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/add_note_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/add_note"
            android:textColor="@color/white"
            android:textSize="@dimen/_9ssp"
            app:icon="@drawable/ic_add"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>